--- a/mod/area/gabel_caelinaeg.git.yml
+++ b/mod/area/gabel_caelinaeg.git.yml
@@ -135,14 +135,6 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_black}
-    VarTable: 
-      type: :list
-      value: &id001 
-        - !nwn-lib.elv.es,2008-12/struct 
-          __struct_id: 0
-          Name: {type: :cexostr, value: wanderclose}
-          Type: {type: :dword, value: 1}
-          Value: {type: :int, value: 1}
     WalkRate: {type: :int, value: 5}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -272,9 +264,6 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_black}
-    VarTable: 
-      type: :list
-      value: *id001
     WalkRate: {type: :int, value: 5}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -404,9 +393,6 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_black}
-    VarTable: 
-      type: :list
-      value: *id001
     WalkRate: {type: :int, value: 5}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -536,9 +522,6 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_bw}
-    VarTable: 
-      type: :list
-      value: *id001
     WalkRate: {type: :int, value: 7}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -668,9 +651,6 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_bw}
-    VarTable: 
-      type: :list
-      value: *id001
     WalkRate: {type: :int, value: 7}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -800,9 +780,6 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_bw}
-    VarTable: 
-      type: :list
-      value: *id001
     WalkRate: {type: :int, value: 7}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -932,9 +909,6 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_white}
-    VarTable: 
-      type: :list
-      value: *id001
     WalkRate: {type: :int, value: 7}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -1064,9 +1038,6 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_white}
-    VarTable: 
-      type: :list
-      value: *id001
     WalkRate: {type: :int, value: 7}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -1196,9 +1167,6 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_k_white}
-    VarTable: 
-      type: :list
-      value: *id001
     WalkRate: {type: :int, value: 7}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -1328,9 +1296,6 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_k_white}
-    VarTable: 
-      type: :list
-      value: *id001
     WalkRate: {type: :int, value: 7}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -1476,7 +1441,7 @@ Door List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -1.5708}
+    Bearing: {type: :float, value: 1.5708}
     CloseLockDC: {type: :byte, value: 30}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 15}
@@ -1550,7 +1515,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 303}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -1.5708}
+    Bearing: {type: :float, value: 1.5708}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -2192,7 +2157,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1341}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -2.0371}
+    Bearing: {type: :float, value: 2.0371}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -3279,7 +3244,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 264}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -1.5708}
+    Bearing: {type: :float, value: 1.5708}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -4110,7 +4075,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1311}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.8831}
+    Bearing: {type: :float, value: 0.8831}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -4173,7 +4138,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1309}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -1.7663}
+    Bearing: {type: :float, value: 1.7663}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -4362,7 +4327,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 320}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -1.5708}
+    Bearing: {type: :float, value: 1.5708}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -4425,7 +4390,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 320}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -1.5708}
+    Bearing: {type: :float, value: 1.5708}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -4488,7 +4453,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 320}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -1.5708}
+    Bearing: {type: :float, value: 1.5708}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -4551,7 +4516,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 320}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -1.5708}
+    Bearing: {type: :float, value: 1.5708}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -4614,7 +4579,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 320}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -1.5708}
+    Bearing: {type: :float, value: 1.5708}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -4677,7 +4642,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 320}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -1.5708}
+    Bearing: {type: :float, value: 1.5708}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -5127,5 +5092,30 @@ TriggerList:
 
 WaypointList: 
   type: :list
-  value: []
+  value: 
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 5
+    Appearance: {type: :byte, value: 3}
+    Description: 
+      type: :cexolocstr
+      value: {}
 
+    HasMapNote: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: ""}
+    LocalizedName: 
+      type: :cexolocstr
+      str_ref: 69063
+      value: {}
+
+    MapNote: 
+      type: :cexolocstr
+      value: {}
+
+    MapNoteEnabled: {type: :byte, value: 1}
+    Tag: {type: :cexostr, value: NW_HOME}
+    TemplateResRef: {type: :resref, value: nw_wp_home}
+    XOrientation: {type: :float, value: 0.0}
+    XPosition: {type: :float, value: 16.8026}
+    YOrientation: {type: :float, value: 1.0}
+    YPosition: {type: :float, value: 4.3855}
+    ZPosition: {type: :float, value: 0.01}
