--- a/mod/area/gabel_caelinaog.are.yml
+++ b/mod/area/gabel_caelinaog.are.yml
@@ -13,7 +13,7 @@ Expansion_List:
 
 Flags: {type: :dword, value: 1}
 FogClipDist: {type: :float, value: 45.0}
-Height: {type: :int, value: 2}
+Height: {type: :int, value: 3}
 ID: {type: :int, value: -1}
 IsNight: {type: :byte, value: 0}
 LightingScheme: {type: :byte, value: 12}
@@ -53,10 +53,10 @@ Tile_List:
     Tile_AnimLoop2: {type: :byte, value: 0}
     Tile_AnimLoop3: {type: :byte, value: 0}
     Tile_Height: {type: :int, value: 0}
-    Tile_ID: {type: :int, value: 100}
+    Tile_ID: {type: :int, value: 297}
     Tile_MainLight1: {type: :byte, value: 0}
     Tile_MainLight2: {type: :byte, value: 0}
-    Tile_Orientation: {type: :int, value: 1}
+    Tile_Orientation: {type: :int, value: 3}
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
@@ -65,12 +65,48 @@ Tile_List:
     Tile_AnimLoop2: {type: :byte, value: 0}
     Tile_AnimLoop3: {type: :byte, value: 0}
     Tile_Height: {type: :int, value: 0}
-    Tile_ID: {type: :int, value: 195}
+    Tile_ID: {type: :int, value: 26}
     Tile_MainLight1: {type: :byte, value: 0}
     Tile_MainLight2: {type: :byte, value: 0}
-    Tile_Orientation: {type: :int, value: 2}
+    Tile_Orientation: {type: :int, value: 3}
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 94}
+    Tile_MainLight1: {type: :byte, value: 4}
+    Tile_MainLight2: {type: :byte, value: 13}
+    Tile_Orientation: {type: :int, value: 3}
+    Tile_SrcLight1: {type: :byte, value: 3}
+    Tile_SrcLight2: {type: :byte, value: 3}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 0}
+    Tile_AnimLoop2: {type: :byte, value: 0}
+    Tile_AnimLoop3: {type: :byte, value: 0}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 100}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 0}
+    Tile_Orientation: {type: :int, value: 1}
+    Tile_SrcLight1: {type: :byte, value: 0}
+    Tile_SrcLight2: {type: :byte, value: 0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 7}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 14}
+    Tile_Orientation: {type: :int, value: 3}
+    Tile_SrcLight1: {type: :byte, value: 2}
+    Tile_SrcLight2: {type: :byte, value: 2}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 0}
