--- a/mod/uti/001.uti.yml
+++ b/mod/uti/001.uti.yml
@@ -3,56 +3,64 @@ __data_type: UTI
 __struct_id: 4294967295
 AddCost: {type: :dword, value: 0}
 ArmorPart_Belt: {type: :byte, value: 0}
-ArmorPart_LBicep: {type: :byte, value: 11}
-ArmorPart_LFArm: {type: :byte, value: 4}
-ArmorPart_LFoot: {type: :byte, value: 4}
-ArmorPart_LHand: {type: :byte, value: 1}
-ArmorPart_LShin: {type: :byte, value: 15}
+ArmorPart_LBicep: {type: :byte, value: 1}
+ArmorPart_LFArm: {type: :byte, value: 1}
+ArmorPart_LFoot: {type: :byte, value: 12}
+ArmorPart_LHand: {type: :byte, value: 6}
+ArmorPart_LShin: {type: :byte, value: 153}
 ArmorPart_LShoul: {type: :byte, value: 0}
 ArmorPart_LThigh: {type: :byte, value: 4}
 ArmorPart_Neck: {type: :byte, value: 1}
 ArmorPart_Pelvis: {type: :byte, value: 3}
-ArmorPart_RBicep: {type: :byte, value: 11}
-ArmorPart_RFArm: {type: :byte, value: 4}
-ArmorPart_RFoot: {type: :byte, value: 4}
-ArmorPart_RHand: {type: :byte, value: 1}
-ArmorPart_RShin: {type: :byte, value: 15}
+ArmorPart_RBicep: {type: :byte, value: 1}
+ArmorPart_RFArm: {type: :byte, value: 1}
+ArmorPart_RFoot: {type: :byte, value: 12}
+ArmorPart_RHand: {type: :byte, value: 6}
+ArmorPart_RShin: {type: :byte, value: 153}
 ArmorPart_RShoul: {type: :byte, value: 0}
 ArmorPart_RThigh: {type: :byte, value: 4}
-ArmorPart_Robe: {type: :byte, value: 29}
-ArmorPart_Torso: {type: :byte, value: 25}
+ArmorPart_Robe: {type: :byte, value: 0}
+ArmorPart_Torso: {type: :byte, value: 8}
 BaseItem: {type: :int, value: 16}
 Charges: {type: :byte, value: 0}
-Cloth1Color: {type: :byte, value: 8}
-Cloth2Color: {type: :byte, value: 11}
+Cloth1Color: {type: :byte, value: 23}
+Cloth2Color: {type: :byte, value: 23}
 Comment: {type: :cexostr, value: ""}
-Cost: {type: :dword, value: 20000}
+Cost: {type: :dword, value: 10}
 Cursed: {type: :byte, value: 0}
 DescIdentified: 
   type: :cexolocstr
-  value: {}
-
+  value: 
+    0: "Dieses einfache gegerbte Rindsleder ist f\xFCr die zwergischen Schmiede gemacht und an ihre K\xF6rpergr\xF6sse angepasst. Es ist Hitze widerst\xE4ndig und passt sich der Haut an."
 Description: 
   type: :cexolocstr
-  value: {}
-
+  value: 
+    4: ""
 Identified: {type: :byte, value: 1}
-Leather1Color: {type: :byte, value: 1}
-Leather2Color: {type: :byte, value: 7}
+Leather1Color: {type: :byte, value: 15}
+Leather2Color: {type: :byte, value: 23}
 LocalizedName: 
   type: :cexolocstr
-  str_ref: 12842
-  value: {}
-
-Metal1Color: {type: :byte, value: 0}
-Metal2Color: {type: :byte, value: 1}
-PaletteID: {type: :byte, value: 0}
+  value: 
+    0: Telor Marrur (w)
+Metal1Color: {type: :byte, value: 3}
+Metal2Color: {type: :byte, value: 0}
+PaletteID: {type: :byte, value: 5}
 Plot: {type: :byte, value: 0}
 PropertiesList: 
   type: :list
-  value: []
-
+  value: 
+  - !nwn-lib.elv.es,2008-12/struct 
+    __data_type: UTI/PropertiesList
+    __struct_id: 0
+    ChanceAppear: {type: :byte, value: 100}
+    CostTable: {type: :byte, value: 0}
+    CostValue: {type: :word, value: 0}
+    Param1: {type: :byte, value: 255}
+    Param1Value: {type: :byte, value: 0}
+    PropertyName: {type: :word, value: 64}
+    Subtype: {type: :word, value: 0}
 StackSize: {type: :word, value: 1}
 Stolen: {type: :byte, value: 0}
-Tag: {type: :cexostr, value: NW_AARCL010}
+Tag: {type: :cexostr, value: TelorMarrur}
 TemplateResRef: {type: :resref, value: "001"}
