--- a/mod/uti/maarcl043.uti.yml
+++ b/mod/uti/maarcl043.uti.yml
@@ -2,57 +2,59 @@
 __data_type: UTI
 __struct_id: 4294967295
 AddCost: {type: :dword, value: 0}
-BaseItem: {type: :int, value: 80}
+ArmorPart_Belt: {type: :byte, value: 159}
+ArmorPart_LBicep: {type: :byte, value: 7}
+ArmorPart_LFArm: {type: :byte, value: 23}
+ArmorPart_LFoot: {type: :byte, value: 5}
+ArmorPart_LHand: {type: :byte, value: 154}
+ArmorPart_LShin: {type: :byte, value: 12}
+ArmorPart_LShoul: {type: :byte, value: 5}
+ArmorPart_LThigh: {type: :byte, value: 10}
+ArmorPart_Neck: {type: :byte, value: 30}
+ArmorPart_Pelvis: {type: :byte, value: 6}
+ArmorPart_RBicep: {type: :byte, value: 7}
+ArmorPart_RFArm: {type: :byte, value: 23}
+ArmorPart_RFoot: {type: :byte, value: 5}
+ArmorPart_RHand: {type: :byte, value: 4}
+ArmorPart_RShin: {type: :byte, value: 12}
+ArmorPart_RShoul: {type: :byte, value: 5}
+ArmorPart_RThigh: {type: :byte, value: 10}
+ArmorPart_Robe: {type: :byte, value: 0}
+ArmorPart_Torso: {type: :byte, value: 53}
+BaseItem: {type: :int, value: 16}
 Charges: {type: :byte, value: 0}
-Cloth1Color: {type: :byte, value: 20}
-Cloth2Color: {type: :byte, value: 20}
-Comment: {type: :cexostr, value: ""}
-Cost: {type: :dword, value: 30450}
+Cloth1Color: {type: :byte, value: 39}
+Cloth2Color: {type: :byte, value: 39}
+Comment: {type: :cexostr, value: "1"}
+Cost: {type: :dword, value: 150000}
 Cursed: {type: :byte, value: 0}
 DescIdentified: 
   type: :cexolocstr
-  str_ref: 66554
-  value: {}
-
+  str_ref: 13786
+  value: 
+    0: ""
+    4: ""
 Description: 
   type: :cexolocstr
-  value: {}
-
-Identified: {type: :byte, value: 0}
-Leather1Color: {type: :byte, value: 20}
-Leather2Color: {type: :byte, value: 20}
+  value: 
+    0: ""
+Identified: {type: :byte, value: 1}
+Leather1Color: {type: :byte, value: 39}
+Leather2Color: {type: :byte, value: 39}
 LocalizedName: 
   type: :cexolocstr
-  str_ref: 66553
-  value: {}
-
-Metal1Color: {type: :byte, value: 53}
-Metal2Color: {type: :byte, value: 53}
-ModelPart1: {type: :byte, value: 1}
-PaletteID: {type: :byte, value: 18}
+  str_ref: 13785
+  value: 
+    0: "Ritterr\xFCstung"
+Metal1Color: {type: :byte, value: 9}
+Metal2Color: {type: :byte, value: 9}
+PaletteID: {type: :byte, value: 8}
 Plot: {type: :byte, value: 0}
 PropertiesList: 
   type: :list
-  value: 
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 0
-    ChanceAppear: {type: :byte, value: 100}
-    CostTable: {type: :byte, value: 6}
-    CostValue: {type: :word, value: 1}
-    Param1: {type: :byte, value: 255}
-    Param1Value: {type: :byte, value: 0}
-    PropertyName: {type: :word, value: 22}
-    Subtype: {type: :word, value: 4}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 0
-    ChanceAppear: {type: :byte, value: 100}
-    CostTable: {type: :byte, value: 0}
-    CostValue: {type: :word, value: 0}
-    Param1: {type: :byte, value: 255}
-    Param1Value: {type: :byte, value: 0}
-    PropertyName: {type: :word, value: 62}
-    Subtype: {type: :word, value: 4}
+  value: []
+
 StackSize: {type: :word, value: 1}
 Stolen: {type: :byte, value: 0}
-Tag: {type: :cexostr, value: X0_MAARCL035}
+Tag: {type: :cexostr, value: NW_MAARCL041}
 TemplateResRef: {type: :resref, value: maarcl043}
