--- a/mod/area/area026.are.yml
+++ b/mod/area/area026.are.yml
@@ -38,8 +38,8 @@ PlayerVsPlayer: {type: :byte, value: 3}
 ResRef: {type: :resref, value: area026}
 ShadowOpacity: {type: :byte, value: 50}
 SkyBox: {type: :byte, value: 0}
-SunAmbientColor: {type: :dword, value: 2109728}
-SunDiffuseColor: {type: :dword, value: 3755837}
+SunAmbientColor: {type: :dword, value: 9803929}
+SunDiffuseColor: {type: :dword, value: 16384}
 SunFogAmount: {type: :byte, value: 0}
 SunFogColor: {type: :dword, value: 1383963}
 SunShadows: {type: :byte, value: 1}
@@ -829,26 +829,26 @@ Tile_List:
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 1
-    Tile_AnimLoop1: {type: :byte, value: 0}
-    Tile_AnimLoop2: {type: :byte, value: 0}
-    Tile_AnimLoop3: {type: :byte, value: 0}
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
     Tile_Height: {type: :int, value: 0}
-    Tile_ID: {type: :int, value: 5}
-    Tile_MainLight1: {type: :byte, value: 4}
+    Tile_ID: {type: :int, value: 69}
+    Tile_MainLight1: {type: :byte, value: 0}
     Tile_MainLight2: {type: :byte, value: 0}
-    Tile_Orientation: {type: :int, value: 3}
+    Tile_Orientation: {type: :int, value: 1}
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 1
-    Tile_AnimLoop1: {type: :byte, value: 0}
-    Tile_AnimLoop2: {type: :byte, value: 0}
-    Tile_AnimLoop3: {type: :byte, value: 0}
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
     Tile_Height: {type: :int, value: 0}
     Tile_ID: {type: :int, value: 5}
-    Tile_MainLight1: {type: :byte, value: 4}
+    Tile_MainLight1: {type: :byte, value: 0}
     Tile_MainLight2: {type: :byte, value: 0}
-    Tile_Orientation: {type: :int, value: 1}
+    Tile_Orientation: {type: :int, value: 2}
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
@@ -973,26 +973,26 @@ Tile_List:
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 1
-    Tile_AnimLoop1: {type: :byte, value: 0}
-    Tile_AnimLoop2: {type: :byte, value: 0}
-    Tile_AnimLoop3: {type: :byte, value: 0}
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
     Tile_Height: {type: :int, value: 0}
-    Tile_ID: {type: :int, value: 5}
-    Tile_MainLight1: {type: :byte, value: 4}
+    Tile_ID: {type: :int, value: 65}
+    Tile_MainLight1: {type: :byte, value: 0}
     Tile_MainLight2: {type: :byte, value: 0}
-    Tile_Orientation: {type: :int, value: 3}
+    Tile_Orientation: {type: :int, value: 0}
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 1
-    Tile_AnimLoop1: {type: :byte, value: 0}
-    Tile_AnimLoop2: {type: :byte, value: 0}
-    Tile_AnimLoop3: {type: :byte, value: 0}
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
     Tile_Height: {type: :int, value: 0}
-    Tile_ID: {type: :int, value: 5}
-    Tile_MainLight1: {type: :byte, value: 4}
+    Tile_ID: {type: :int, value: 66}
+    Tile_MainLight1: {type: :byte, value: 0}
     Tile_MainLight2: {type: :byte, value: 0}
-    Tile_Orientation: {type: :int, value: 1}
+    Tile_Orientation: {type: :int, value: 3}
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
